// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should render correctly with valid input 1`] = `
<div
  className="makeStyles-search-1"
  onKeyDown={[Function]}
>
  <div
    className="MuiInputBase-root makeStyles-inputRoot-3 MuiInputBase-adornedEnd"
    onClick={[Function]}
  >
    <input
      aria-label="search"
      autoCapitalize="none"
      autoComplete="off"
      className="MuiInputBase-input makeStyles-inputInput-4 MuiInputBase-inputAdornedEnd"
      id="test-input-id"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Search…"
      spellCheck={false}
      type="text"
    />
    <button
      className="MuiButtonBase-root MuiIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <Portal
    containerInfo={
      <body>
        <div
          class="app"
          id="app"
        >
          <div
            class="makeStyles-search-1"
          >
            <div
              class="MuiInputBase-root makeStyles-inputRoot-3 MuiInputBase-adornedEnd"
            >
              <input
                aria-label="search"
                autocapitalize="none"
                autocomplete="off"
                class="MuiInputBase-input makeStyles-inputInput-4 MuiInputBase-inputAdornedEnd"
                id="test-input-id"
                placeholder="Search…"
                spellcheck="false"
                type="text"
                value=""
              />
              <button
                class="MuiButtonBase-root MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="app"
          id="app"
        >
          <div
            class="makeStyles-search-1"
          >
            <div
              class="MuiInputBase-root makeStyles-inputRoot-3 MuiInputBase-adornedEnd"
            >
              <input
                aria-label="search"
                autocapitalize="none"
                autocomplete="off"
                class="MuiInputBase-input makeStyles-inputInput-4 MuiInputBase-inputAdornedEnd"
                placeholder="Search…"
                spellcheck="false"
                type="text"
                value=""
              />
              <button
                class="MuiButtonBase-root MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-popper-6"
          role="presentation"
          style="position: absolute; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0); will-change: transform;"
          x-placement="bottom-end"
        >
          <div
            class="MuiPaper-root makeStyles-paper-8 MuiPaper-elevation1 MuiPaper-rounded"
          >
            <ul
              aria-labelledby="test-input-id-label"
              class="makeStyles-listbox-7"
              id="test-input-id-popup"
              role="listbox"
            >
              <li>
                <div
                  class="makeStyles-option-9"
                  data-option-index="0"
                  id="test-input-id-option-0"
                  role="option"
                  tabindex="-1"
                >
                  Test 1
                </div>
              </li>
              <li>
                <div
                  class="makeStyles-option-9"
                  data-option-index="1"
                  id="test-input-id-option-1"
                  role="option"
                  tabindex="-1"
                >
                  Test 2
                </div>
              </li>
              <li>
                <div
                  class="makeStyles-option-9"
                  data-option-index="2"
                  id="test-input-id-option-2"
                  role="option"
                  tabindex="-1"
                >
                  Test 3
                </div>
              </li>
            </ul>
          </div>
        </div>
      </body>
    }
  >
    <div
      className="makeStyles-popper-6"
      role="presentation"
      style={
        Object {
          "display": null,
          "left": 0,
          "position": "fixed",
          "top": 0,
        }
      }
    >
      <div
        className="MuiPaper-root makeStyles-paper-8 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <ul
          aria-labelledby="test-input-id-label"
          className="makeStyles-listbox-7"
          id="test-input-id-popup"
          onMouseDown={[Function]}
          role="listbox"
        >
          <li
            key="1"
          >
            <div
              className="makeStyles-option-9"
              data-option-index={0}
              id="test-input-id-option-0"
              key="0"
              onClick={[Function]}
              onMouseOver={[Function]}
              role="option"
              tabIndex={-1}
            >
              Test 1
            </div>
          </li>
          <li
            key="2"
          >
            <div
              className="makeStyles-option-9"
              data-option-index={1}
              id="test-input-id-option-1"
              key="1"
              onClick={[Function]}
              onMouseOver={[Function]}
              role="option"
              tabIndex={-1}
            >
              Test 2
            </div>
          </li>
          <li
            key="3"
          >
            <div
              className="makeStyles-option-9"
              data-option-index={2}
              id="test-input-id-option-2"
              key="2"
              onClick={[Function]}
              onMouseOver={[Function]}
              role="option"
              tabIndex={-1}
            >
              Test 3
            </div>
          </li>
        </ul>
      </div>
    </div>
  </Portal>
</div>
`;

exports[`Search should render correctly without input 1`] = `
<div
  className="makeStyles-search-1"
  onKeyDown={[Function]}
>
  <div
    className="MuiInputBase-root makeStyles-inputRoot-3 MuiInputBase-adornedEnd"
    onClick={[Function]}
  >
    <input
      aria-label="search"
      autoCapitalize="none"
      autoComplete="off"
      className="MuiInputBase-input makeStyles-inputInput-4 MuiInputBase-inputAdornedEnd"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Search…"
      spellCheck={false}
      type="text"
    />
    <button
      className="MuiButtonBase-root MuiIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
